--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-MONGO_URI=mongodb+srv://erodegokul123_db_user:JUWotiLc7UceAy5A@cluster0.runewgg.mongodb.net/
+MONGO_URI=
 PORT=5000
-# erodegokul123_db_user
-# JUWotiLc7UceAy5A
-# mongodb+srv://erodegokul123_db_user:JUWotiLc7UceAy5A@cluster0.runewgg.mongodb.net/
